--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Bienestar íntimo para adultos</title>
+  <title>Bienestar y cuidado personal</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Espacio de bienestar y autocuidado personal para adultos.">
+  <meta name="description" content="Espacio informativo sobre bienestar y autocuidado personal.">
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -31,14 +31,14 @@
       color: #444;
       line-height: 1.5;
     }
-    .age {
-      margin: 16px 0;
-      font-weight: 600;
-      color: #000;
+    .disclaimer {
+      margin-top: 18px;
+      font-size: 12px;
+      color: #777;
     }
     a.button {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 22px;
       padding: 14px 22px;
       background: #000;
       color: #fff;
@@ -50,18 +50,20 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bienestar íntimo para adultos</h1>
+    <h1>Bienestar y cuidado personal</h1>
 
     <p>
-      Educación, autocuidado y experiencias privadas.<br>
-      Contenido informativo dirigido exclusivamente a mayores de edad.
+      Información y recursos orientados al autocuidado consciente
+      y al bienestar personal.
     </p>
 
-    <div class="age">+18</div>
-
     <a class="button" href="https://dsensulove.com">
-      Acceder al espacio privado
+      Conocer más
     </a>
+
+    <p class="disclaimer">
+      Contenido informativo dirigido a público adulto.
+    </p>
   </div>
 </body>
 </html>
