--- a/index.html
+++ b/index.html
@@ -2,68 +2,92 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Bienestar y cuidado personal</title>
+  <title>Autocuidado y bienestar personal</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Espacio informativo sobre bienestar y autocuidado personal.">
+  <meta name="description" content="Espacio informativo sobre autocuidado, bienestar personal y educación para adultos.">
+
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background-color: #f4f4f4;
-      padding: 40px 16px;
+      background: linear-gradient(180deg, #f6f6f6, #ffffff);
+      padding: 48px 16px;
       text-align: center;
     }
     .container {
       max-width: 420px;
       margin: auto;
       background: #ffffff;
-      padding: 32px 24px;
-      border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.05);
+      padding: 36px 28px;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+    .brand {
+      font-size: 14px;
+      letter-spacing: 1px;
+      color: #777;
+      margin-bottom: 8px;
     }
     h1 {
-      font-size: 22px;
-      margin-bottom: 12px;
+      font-size: 24px;
+      margin-bottom: 14px;
       color: #111;
     }
     p {
       font-size: 15px;
       color: #444;
-      line-height: 1.5;
+      line-height: 1.6;
+      margin-bottom: 16px;
     }
-    .disclaimer {
-      margin-top: 18px;
+    .age-box {
+      margin: 18px auto;
+      padding: 10px 16px;
+      display: inline-block;
+      border-radius: 999px;
+      background: #f1f1f1;
+      font-size: 14px;
+      font-weight: 600;
+      color: #000;
+    }
+    a.button {
+      display: block;
+      margin-top: 22px;
+      padding: 15px 22px;
+      background: #111;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 12px;
+      font-size: 16px;
+      font-weight: 600;
+    }
+    .note {
+      margin-top: 14px;
       font-size: 12px;
       color: #777;
     }
-    a.button {
-      display: inline-block;
-      margin-top: 22px;
-      padding: 14px 22px;
-      background: #000;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 15px;
-    }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <h1>Bienestar y cuidado personal</h1>
+    <div class="brand">CUIDADO PERSONAL</div>
+
+    <h1>Autocuidado y bienestar íntimo</h1>
 
     <p>
-      Información y recursos orientados al autocuidado consciente
-      y al bienestar personal.
+      Información, educación y productos enfocados en el bienestar personal y el autocuidado consciente.
+      Contenido diseñado exclusivamente para personas adultas.
     </p>
+
+    <div class="age-box">Solo para mayores de 18 años</div>
 
     <a class="button" href="https://dsensulove.com">
-      Conocer más
+      Continuar al sitio
     </a>
 
-    <p class="disclaimer">
-      Contenido informativo dirigido a público adulto.
-    </p>
+    <div class="note">
+      Al continuar confirmas que eres mayor de edad.
+    </div>
   </div>
 </body>
 </html>
