--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="age-box">Solo para mayores de 18 años</div>
 
     <a class="button" href="https://dsensulove.com">
-      Continuar al sitio
+      CONTINUAR
     </a>
 
     <div class="note">
