--- a/index.html
+++ b/index.html
@@ -3,91 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <title>Autocuidado y bienestar personal</title>
+
+  <!-- Evitar indexación -->
   <meta name="robots" content="noindex, nofollow">
+
+  <!-- Responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Espacio informativo sobre autocuidado, bienestar personal y educación para adultos.">
+
+  <!-- Descripción neutra -->
+  <meta name="description" content="Información sobre autocuidado y bienestar personal. Acceso discreto y responsable.">
 
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: linear-gradient(180deg, #f6f6f6, #ffffff);
-      padding: 48px 16px;
+      background-color: #f4f4f4;
+      padding: 40px 16px;
       text-align: center;
     }
+
     .container {
       max-width: 420px;
       margin: auto;
       background: #ffffff;
-      padding: 36px 28px;
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+      padding: 32px 24px;
+      border-radius: 14px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.05);
     }
-    .brand {
-      font-size: 14px;
-      letter-spacing: 1px;
-      color: #777;
-      margin-bottom: 8px;
-    }
+
     h1 {
-      font-size: 24px;
-      margin-bottom: 14px;
+      font-size: 22px;
+      margin-bottom: 12px;
       color: #111;
     }
+
     p {
       font-size: 15px;
       color: #444;
-      line-height: 1.6;
-      margin-bottom: 16px;
+      line-height: 1.5;
     }
-    .age-box {
-      margin: 18px auto;
-      padding: 10px 16px;
-      display: inline-block;
-      border-radius: 999px;
-      background: #f1f1f1;
+
+    .age {
+      margin: 16px 0;
+      font-weight: 500;
       font-size: 14px;
-      font-weight: 600;
-      color: #000;
+      color: #333;
     }
+
     a.button {
-      display: block;
+      display: inline-block;
       margin-top: 22px;
-      padding: 15px 22px;
-      background: #111;
+      padding: 14px 26px;
+      background: #000;
       color: #fff;
       text-decoration: none;
-      border-radius: 12px;
-      font-size: 16px;
-      font-weight: 600;
+      border-radius: 10px;
+      font-size: 15px;
+      font-weight: 500;
     }
-    .note {
-      margin-top: 14px;
-      font-size: 12px;
-      color: #777;
+
+    a.button:hover {
+      opacity: 0.9;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <div class="brand">CUIDADO PERSONAL</div>
-
-    <h1>Autocuidado y bienestar íntimo</h1>
+    <h1>Autocuidado y bienestar personal</h1>
 
     <p>
-      Información, educación y productos enfocados en el bienestar personal y el autocuidado consciente.
-      Contenido diseñado exclusivamente para personas adultas.
+      Información sobre autocuidado, relaciones y bienestar.<br>
+      Acceso discreto y responsable.
     </p>
 
-    <div class="age-box">Solo para mayores de 18 años</div>
+    <div class="age">Acceso para mayores de edad</div>
 
-    <a class="button" href="https://dsensulove.com">
-      CONTINUAR
+    <!-- CAMBIA AQUÍ LA URL SI QUIERES ENVIAR A UNA COLECCIÓN -->
+    <a class="button" href="https://dsensulove.com/collections/lenceria">
+      Continuar
     </a>
-
-    <div class="note">
-      Al continuar confirmas que eres mayor de edad.
-    </div>
   </div>
 </body>
 </html>
