--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Acceso a colección privada</title>
+  <title>Bienestar y autocuidado personal</title>
 
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Acceso rápido y discreto a nuestra colección seleccionada.">
+  <meta name="description" content="Explora opciones de bienestar y autocuidado de forma discreta.">
 
   <style>
     body {
@@ -22,12 +22,12 @@
       background: #ffffff;
       padding: 32px 24px;
       border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.06);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.05);
     }
 
     h1 {
-      font-size: 21px;
-      margin-bottom: 12px;
+      font-size: 22px;
+      margin-bottom: 14px;
       color: #111;
     }
 
@@ -38,14 +38,14 @@
     }
 
     .note {
-      margin-top: 18px;
+      margin-top: 14px;
       font-size: 14px;
       color: #666;
     }
 
     a.button {
       display: inline-block;
-      margin-top: 24px;
+      margin-top: 22px;
       padding: 14px 26px;
       background: #000;
       color: #fff;
@@ -54,30 +54,23 @@
       font-size: 15px;
     }
   </style>
-
-  <script>
-    // Redirección forzada y segura
-    setTimeout(function () {
-      window.location.replace("https://dsensulove.com/collections/lenceria");
-    }, 900);
-  </script>
 </head>
 
 <body>
   <div class="container">
-    <h1>Estás a un paso</h1>
+    <h1>Bienestar y autocuidado para adultos</h1>
 
     <p>
-      Accede ahora a nuestra colección privada de productos seleccionados
-      para bienestar y confianza personal.
+      Acceso a una selección privada enfocada en el bienestar personal.<br>
+      Contenido dirigido exclusivamente a mayores de edad.
     </p>
 
     <div class="note">
-      Redirigiendo automáticamente…
+      Continúa solo si eres mayor de 18 años.
     </div>
 
-    <a class="button" href="https://dsensulove.com/collections/lenceria">
-      Continuar ahora
+    <a class="button" href="https://dsensulove.com">
+      Continuar
     </a>
   </div>
 </body>
