--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explora opciones de bienestar y autocuidado de forma discreta.">
+  <meta name="description" content="Información y recursos sobre bienestar, confianza personal y autocuidado para adultos.">
 
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       background-color: #f4f4f4;
-      padding: 40px 16px;
-      text-align: center;
+      padding: 32px 16px;
+      color: #222;
     }
 
     .container {
-      max-width: 420px;
+      max-width: 640px;
       margin: auto;
       background: #ffffff;
       padding: 32px 24px;
@@ -26,52 +26,110 @@
     }
 
     h1 {
-      font-size: 22px;
-      margin-bottom: 14px;
-      color: #111;
+      font-size: 24px;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin-top: 28px;
+      margin-bottom: 10px;
     }
 
     p {
       font-size: 15px;
-      color: #444;
       line-height: 1.6;
+      color: #444;
+    }
+
+    ul {
+      margin: 12px 0 20px 18px;
+      color: #444;
+      font-size: 15px;
     }
 
     .note {
-      margin-top: 14px;
+      background: #fafafa;
+      border-left: 4px solid #000;
+      padding: 14px;
+      margin-top: 24px;
       font-size: 14px;
-      color: #666;
+      color: #333;
     }
 
-    a.button {
+    .resource {
+      margin-top: 32px;
+      padding-top: 20px;
+      border-top: 1px solid #e5e5e5;
+    }
+
+    a.link {
       display: inline-block;
-      margin-top: 22px;
-      padding: 14px 26px;
-      background: #000;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 15px;
+      margin-top: 12px;
+      color: #000;
+      font-weight: 600;
+      text-decoration: underline;
+    }
+
+    .footer {
+      margin-top: 32px;
+      font-size: 13px;
+      color: #666;
+      text-align: center;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <h1>Bienestar y autocuidado para adultos</h1>
+    <h1>Bienestar y autocuidado personal</h1>
 
     <p>
-      Acceso a una selección privada enfocada en el bienestar personal.<br>
-      Contenido dirigido exclusivamente a mayores de edad.
+      El bienestar personal va más allá de lo físico. Involucra autoestima, confianza,
+      autocuidado y la libertad de explorar lo que nos hace sentir bien, siempre de forma
+      consciente e informada.
+    </p>
+
+    <h2>¿Por qué hablar de autocuidado?</h2>
+    <p>
+      El autocuidado es una parte esencial del bienestar emocional y personal.
+      Informarse correctamente permite tomar decisiones alineadas con nuestras necesidades,
+      límites y preferencias.
+    </p>
+
+    <h2>Aspectos clave del bienestar personal</h2>
+    <ul>
+      <li>Conexión con el propio cuerpo</li>
+      <li>Confianza y autoestima</li>
+      <li>Exploración personal responsable</li>
+      <li>Elección consciente de productos y recursos</li>
+    </ul>
+
+    <p>
+      Existen distintos recursos que pueden acompañar estos procesos, siempre desde
+      una perspectiva privada, informada y responsable.
     </p>
 
     <div class="note">
-      Continúa solo si eres mayor de 18 años.
+      Este contenido está dirigido exclusivamente a personas mayores de edad
+      interesadas en temas de bienestar y autocuidado personal.
     </div>
 
-    <a class="button" href="https://dsensulove.com">
-      Continuar
-    </a>
+    <div class="resource">
+      <h2>Recursos recomendados</h2>
+      <p>
+        Si deseas explorar una selección de artículos enfocados en el bienestar
+        personal, puedes consultar el siguiente recurso informativo:
+      </p>
+
+      <a class="link" href="https://dsensulove.com/collections/lenceria">
+        Explorar recursos disponibles
+      </a>
+    </div>
+
+    <div class="footer">
+      Contenido informativo · Uso responsable · Acceso voluntario
+    </div>
   </div>
 </body>
 </html>
