--- a/index.html
+++ b/index.html
@@ -2,133 +2,103 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Bienestar y autocuidado personal</title>
+  <title>Guía de autocuidado personal</title>
 
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Información y recursos sobre bienestar, confianza personal y autocuidado para adultos.">
+  <meta name="description" content="Guía informativa sobre autocuidado personal, bienestar y confianza.">
 
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background-color: #f4f4f4;
-      padding: 32px 16px;
+      background-color: #f5f5f5;
+      padding: 40px 16px;
       color: #222;
     }
 
     .container {
-      max-width: 640px;
+      max-width: 720px;
       margin: auto;
       background: #ffffff;
-      padding: 32px 24px;
+      padding: 32px 28px;
       border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.05);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.06);
     }
 
     h1 {
-      font-size: 24px;
+      font-size: 26px;
       margin-bottom: 16px;
     }
 
     h2 {
-      font-size: 18px;
+      font-size: 20px;
       margin-top: 28px;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
 
     p {
-      font-size: 15px;
-      line-height: 1.6;
+      font-size: 16px;
+      line-height: 1.7;
+      margin-bottom: 14px;
       color: #444;
     }
 
     ul {
-      margin: 12px 0 20px 18px;
+      padding-left: 18px;
+      margin-bottom: 18px;
+    }
+
+    li {
+      margin-bottom: 8px;
       color: #444;
-      font-size: 15px;
     }
 
     .note {
-      background: #fafafa;
-      border-left: 4px solid #000;
-      padding: 14px;
-      margin-top: 24px;
+      margin-top: 32px;
       font-size: 14px;
-      color: #333;
-    }
-
-    .resource {
-      margin-top: 32px;
-      padding-top: 20px;
-      border-top: 1px solid #e5e5e5;
-    }
-
-    a.link {
-      display: inline-block;
-      margin-top: 12px;
-      color: #000;
-      font-weight: 600;
-      text-decoration: underline;
-    }
-
-    .footer {
-      margin-top: 32px;
-      font-size: 13px;
       color: #666;
-      text-align: center;
+      border-top: 1px solid #eee;
+      padding-top: 16px;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <h1>Bienestar y autocuidado personal</h1>
+    <h1>Guía básica de autocuidado personal</h1>
 
     <p>
-      El bienestar personal va más allá de lo físico. Involucra autoestima, confianza,
-      autocuidado y la libertad de explorar lo que nos hace sentir bien, siempre de forma
-      consciente e informada.
+      El autocuidado personal es una práctica esencial para el bienestar físico,
+      emocional y mental. Implica conocerse, respetarse y tomar decisiones
+      conscientes sobre hábitos, rutinas y estilo de vida.
     </p>
 
-    <h2>¿Por qué hablar de autocuidado?</h2>
+    <h2>¿Por qué es importante el autocuidado?</h2>
     <p>
-      El autocuidado es una parte esencial del bienestar emocional y personal.
-      Informarse correctamente permite tomar decisiones alineadas con nuestras necesidades,
-      límites y preferencias.
+      Dedicar tiempo al autocuidado permite mejorar la calidad de vida,
+      fortalecer la autoestima y reducir el estrés. No se trata de excesos,
+      sino de equilibrio y responsabilidad personal.
     </p>
 
     <h2>Aspectos clave del bienestar personal</h2>
     <ul>
-      <li>Conexión con el propio cuerpo</li>
-      <li>Confianza y autoestima</li>
-      <li>Exploración personal responsable</li>
-      <li>Elección consciente de productos y recursos</li>
+      <li>Escuchar las propias necesidades físicas y emocionales</li>
+      <li>Construir hábitos saludables y sostenibles</li>
+      <li>Fomentar la confianza y el respeto personal</li>
+      <li>Buscar información clara y responsable</li>
     </ul>
 
+    <h2>Información y toma de decisiones</h2>
     <p>
-      Existen distintos recursos que pueden acompañar estos procesos, siempre desde
-      una perspectiva privada, informada y responsable.
+      Contar con información confiable permite tomar mejores decisiones
+      relacionadas con el bienestar y el autocuidado. Cada persona tiene
+      su propio ritmo y contexto, por lo que es importante informarse
+      antes de explorar nuevas opciones.
     </p>
 
     <div class="note">
-      Este contenido está dirigido exclusivamente a personas mayores de edad
-      interesadas en temas de bienestar y autocuidado personal.
-    </div>
-
-    <div class="resource">
-      <h2>Recursos recomendados</h2>
-      <p>
-        Si deseas explorar una selección de artículos enfocados en el bienestar
-        personal, puedes consultar el siguiente recurso informativo:
-      </p>
-
-      <a class="link" href="https://dsensulove.com/collections/lenceria">
-        Explorar recursos disponibles
-      </a>
-    </div>
-
-    <div class="footer">
-      Contenido informativo · Uso responsable · Acceso voluntario
+      Este contenido es únicamente informativo y tiene como objetivo
+      promover hábitos de autocuidado y bienestar personal.
     </div>
   </div>
 </body>
